--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unhead/vue": "^2.1.2",
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
+    "vue-grid-layout-v3": "^3.1.2",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
